--- a/project-3/index.html
+++ b/project-3/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="content">
         <h1>Amazing Article</h1>
-        <small>Florin Pop</small>
+        <small><em>Florin Pop</em></small>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate deserunt nesciunt voluptatibus, asperiores voluptas unde illum minima cum eligendi ad? Nostrum repellat deleniti molestias veniam inventore? Tempore, eligendi saepe accusamus quibusdam voluptatibus, sed, veritatis facere veniam in perspiciatis vero repellat! Architecto quasi, natus atque maxime a praesentium aut reiciendis nihil culpa consectetur quo maiores! Architecto recusandae magnam quam numquam maiores error, et quibusdam. Natus quas itaque sed suscipit consequuntur nobis dolore autem nostrum vitae architecto exercitationem, alias, cumque praesentium consectetur ullam. Vel magnam, officiis maiores dolorem debitis doloremque eius assumenda consectetur magni beatae perspiciatis tempore ratione est nisi repellat molestias!</p>
         <h3>My Dog</h3>
         <img src="./image/pexels-svetozar-milashevich-1490908.jpg" alt="">
