--- a/project-9/index.html
+++ b/project-9/index.html
@@ -14,7 +14,8 @@
     <audio src="/project-9/sounds/victory.mp3" id="victory"></audio>
     <audio src="/project-9/sounds/wrong.mp3" id="wrong"></audio>
 
-    <div id="buttons"></div>
+    <div id="buttons">
+    </div>
 
 
     <script src="script.js"></script>
