--- a/project-10/index.html
+++ b/project-10/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <p>Doon't Laugh Challange</p>
-        <h2>//Joke goes here</h2>
-        <button class="btn">Get Another Joke</button>
+        <p><b style="color: rgb(205, 205, 205);">Don't Laugh Challange</b></p>
+        <h2 id="joke">Kaz uçar da Laz uçamaz mı</h2>
+        <button id="jokeBtn" class="btn">Get Another Joke</button>
     </div>
 
     <script src="script.js"></script>    
