--- a/project-13/index.html
+++ b/project-13/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Project-13</title>
+    <title>Project-13 Random Choice Picker</title>
 </head>
 <body>
+    <div class="container">
+        <h3>Enter all of the choices divided by a comma (','). <br> Press enter when you're done</h3>
+        <textarea placeholder="Enter choices here..." id="textarea"></textarea>
+
+  
+        <div id="tags"><span class="tag">Choice1</span> <span class="tag highlight">Choice2</span> </div>
+        
+      </div>
     <script src="script.js"></script>
 </body>
 </html>
