--- a/project-14/index.html
+++ b/project-14/index.html
@@ -7,6 +7,20 @@
     <title>Project-14 Animated Navigation</title>
 </head>
 <body>
+    <nav class="active" id="nav">
+        <ul>
+            <li><a href="">HOME</a></li>
+            <li><a href="">WORKS</a></li>
+            <li><a href="">ABOUT</a></li>
+            <li><a href="">CONTACT</a></li>
+        </ul>
+        <button class="icon" id="toggle">
+            <div class="line line1"></div>
+            <div class="line line2"></div>
+        </button>
+    </nav>
+
+
     <script src="script.js"></script>
 </body>
 </html>
