--- a/project-17/index.html
+++ b/project-17/index.html
@@ -7,7 +7,15 @@
     <title>Project-17 Movie App</title>
 </head>
 <body>
-    <nav>
+    <header>
+        <form id="form">
+          <input type="text" id="search" class="search" placeholder="Search">
+        </form>
+      </header>
+  
+      <main id="main"></main>
+    
+    <!--<nav>
         <input type="search" id="gsearch" name="gsearch" placeholder="search...">
     </nav>
     <div class="movie-container">
@@ -51,7 +59,7 @@
                 <b>OVERVIEW</b> <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus voluptates quam eius aspernatur, corrupti fugiat maxime necessitatibus non dolorum fugit dicta et corporis eum, dolorem, quas distinctio obcaecati error commodi velit. Corporis aut sit magnam pariatur ipsum a debitis sint molestias et porro ipsam hic d atque!
             </p>
         </div>
-    </div>
+    </div>-->
     
     <script src="script.js"></script>
 </body>
