--- a/project-19/index.html
+++ b/project-19/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Project-19 Theme Clock</title>
 </head>
+
 <body>
+    <button id="toggle">Dark Mode</button>
+    <div class="clock-container">
+        <div class="clock">
+            <div class="needle hour"></div>
+            <div class="needle minute"></div>
+            <div class="needle second"></div>
+            <div class="center-point"></div>
+        </div>
+        <div class="time"></div>
+        <div class="date"> <span class="circle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eos
+                quibusdam pariatur ut iusto, optio voluptate, doloribus quo eius eum ipsam velit ab praesentium commodi
+                aliquid perferendis nulla, saepe eligendi ratione. At repellat ducimus asperiores odit, dicta eligendi
+                nulla laudantium.</span></div>
+
+    </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
