--- a/project-22/index.html
+++ b/project-22/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <canvas id="canvas" width="800" height="800"></canvas>
+    <canvas id="canvas" width="600px" height="600px"></canvas>
     <div class="toolbox">
         <button id="decrease">-</button>
-        <span id="size">20</span>
+        <span id="size">10</span>
         <button id="increase">+</button>
         <input type="color" id="color">
         <button id="clear">X</button>
