--- a/project-25/index.html
+++ b/project-25/index.html
@@ -10,6 +10,42 @@
 </head>
 
 <body>
+    <nav class="nav">
+        <div class="container">
+            <h1 class="logo"><a href="/project-25/index.html">My Website</a></h1>
+        </div>
+        <ul>
+            <li><a href="" class="active">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+    </nav>
+
+    <div class="hero">
+        <div class="container">
+            <h1>Welcome to My Website</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius eaque magni quibusdam consequatur tempore
+                sit aperiam laudantium natus quia iste?</p>
+        </div>
+    </div>
+    <section class="container content">
+        <h2>Content One</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga tenetur impedit vel necessitatibus! Ratione
+            quas minima exercitationem omnis dignissimos placeat voluptates totam sed aut nihil harum incidunt unde ex
+            officia alias repellendus, excepturi enim eveniet blanditiis sapiente, officiis optio dolore earum aliquam.
+            Porro minus enim placeat aliquam mollitia libero cupiditate iste ratione, error fugiat sint eligendi quia
+            amet aliquid perspiciatis incidunt tempore expedita facilis vitae, in magni, eaque doloremque ipsa.
+            Accusantium deserunt deleniti fugit molestias nam rerum dolorum dolor magni adipisci, laborum quo ipsam,
+            tempora quidem. Non aliquid sequi repudiandae! Ab aliquam laborum, enim a iure eaque. Eaque, dignissimos
+            ipsum.</p>
+
+        <h3>Content Two</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia cumque earum perspiciatis numquam odio eaque
+            asperiores laudantium repudiandae voluptates unde. Libero culpa aut nihil nam maxime expedita voluptas
+            explicabo consequuntur voluptatibus quod. Beatae eligendi ducimus consectetur eum mollitia labore alias et a
+            facere vitae, cupiditate est voluptas facilis in distinctio.</p>
+    </section>
 
 
     <script src="script.js"></script>
