--- a/project-28/index.html
+++ b/project-28/index.html
@@ -12,7 +12,13 @@
     <form class="user-form" id="form">
         <input type="text" id="search" placeholder="Search a Github User">
     </form>
+    <main id="main">
+    </main>
 
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.2/axios.min.js"
+        integrity="sha512-b94Z6431JyXY14iSXwgzeZurHHRNkLt9d6bAHt7BZT38eqV+GyngIi/tVye4jBKPYQ2lBdRs0glww4fmpuLRwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
 
