add new project

--- a/project-29/index.html
+++ b/project-29/index.html
@@ -5,10 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project29 Double Heart Click</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/31465048ee.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <h3>Double click on the image to <i class="fa-solid fa-heart"></i> it</h3>
+    <small>You liked it <span id="times">0</span> times</small>
 
+    <div class="loveMe"><i class="fas fa-heart"></i></div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
