--- a/project-31/index.html
+++ b/project-31/index.html
@@ -19,19 +19,19 @@
     </div>
 
     <div class="toggle-container">
-        <input type="checkbox" id="good" class="toggle">
-        <label for="good" class="label">
+        <input type="checkbox" id="cheap" class="toggle">
+        <label for="cheap" class="label">
             <div class="ball"></div>
         </label>
-        <span>Good</span>
+        <span>Cheap</span>
     </div>
 
     <div class="toggle-container">
-        <input type="checkbox" id="good" class="toggle">
-        <label for="good" class="label">
+        <input type="checkbox" id="fast" class="toggle">
+        <label for="fast" class="label">
             <div class="ball"></div>
         </label>
-        <span>Good</span>
+        <span>Fast</span>
     </div>
 
 
