--- a/project-33/index.html
+++ b/project-33/index.html
@@ -21,7 +21,7 @@
 
     <div class="final">
         <h1>GO</h1>
-        <button id="replay">Replay</button>
+        <button id="replay"><span>Replay</span></button>
     </div>
 
     <div class="final">
