--- a/project-34/index.html
+++ b/project-34/index.html
@@ -12,19 +12,19 @@
     <div class="carousel">
         <div class="image-container" id="imgs">
             <img src="https://images.unsplash.com/photo-1572726729207-a78d6feb18d7?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                alt="candle">
+                alt="candle" no-repeat center>
             <img src="https://images.unsplash.com/photo-1514377006585-6e7975371bd6?q=80&w=1288&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                 alt="tree">
             <img src="https://plus.unsplash.com/premium_photo-1668426421487-7a3e4ff8db0c?q=80&w=1587&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                 alt="">
             <img src="https://images.unsplash.com/photo-1544546491-1ecfecfcc75a?q=80&w=1288&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                 alt="">
-
+        </div>
+        <div class="buttons-container">
+            <button id="left">Prev</button>
+            <button id="next">Next</button>
         </div>
     </div>
-
-
-
     <script src="script.js"></script>
 </body>
 
