--- a/project-36/index.html
+++ b/project-36/index.html
@@ -23,6 +23,31 @@
             </div>
 
         </div>
+        <div class="pokemon" style="background-color: rgb(222, 253, 224);">
+            <div class="img-container">
+                <img src="" alt="">
+            </div>
+
+            <div class="info">
+                <span class="number">#0001</span>
+                <h3 class="name">Bulbasaur</h3>
+                <small class="type">Type: <span>grass</span></small>
+            </div>
+
+
+        </div>
+        <div class="pokemon" style="background-color: rgb(222, 253, 224);">
+            <div class="img-container">
+                <img src="" alt="">
+            </div>
+
+            <div class="info">
+                <span class="number">#0001</span>
+                <h3 class="name">Bulbasaur</h3>
+                <small class="type">Type: <span>grass</span></small>
+            </div>
+        </div>
+
     </div>
 
 
