--- a/project-37/index.html
+++ b/project-37/index.html
@@ -5,10 +5,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Project-37 Mobile Tab Navigation</title>
 </head>
 
 <body>
+    <div class="phone">
+        <img src="https://images.unsplash.com/photo-1618788372246-79faff0c3742?q=80&w=1527&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="home" class="content">
+        <img src="https://images.unsplash.com/photo-1535957998253-26ae1ef29506?q=80&w=1336&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="work" class="content">
+        <img src="https://images.unsplash.com/reserve/LJIZlzHgQ7WPSh5KVTCB_Typewriter.jpg?q=80&w=1392&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+            alt="blog" class="content">
+        <img src="https://images.unsplash.com/photo-1600880292089-90a7e086ee0c?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3Dabout"
+            alt="about" class="content">
+
+
+        <nav>
+            <ul>
+                <li>
+                    <i class="fa-solid fa-house"></i>
+                    <p>Home</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-box"></i>
+                    <p>Work</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-box"></i>
+                    <p>Blog</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-box"></i>
+                    <p>About</p>
+                </li>
+            </ul>
+        </nav>
+    </div>
 
     <script src="script.js"></script>
 </body>
