--- a/project-39/index.html
+++ b/project-39/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <button id="btn" class="magic">Magic 🎩</button>
+    <div id="boxes" class="boxes big"></div>
 
 
     <script src="script.js"></script>
