--- a/project-41/index.html
+++ b/project-41/index.html
@@ -9,6 +9,45 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="header">
+            <h4 class="title"> Live User Filter</h4>
+            <small class="subtitle">Search by name and/or location</small>
+            <input type="text" id="filter" placeholder="Search">
+
+        </div>
+        <header>
+            <ul id="result" class="user-list">
+                <!--<li>
+                    <img src="https://randomuser.me/api/portraits/women/33.jpg" alt="Sara">
+                    <div class="user-info">
+                        <h4>Sara Smith</h4>
+                        <p>Wexford, Ireland</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="https://randomuser.me/api/portraits/women/33.jpg" alt="Sara">
+                    <div class="user-info">
+                        <h4>Sara Smith</h4>
+                        <p>Wexford, Ireland</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="https://randomuser.me/api/portraits/women/33.jpg" alt="Sara">
+                    <div class="user-info">
+                        <h4>Sara Smith</h4>
+                        <p>Wexford, Ireland</p>
+                    </div>
+                </li>-->
+                <li>
+                    <h3>Loading...</h3>
+                </li>
+            </ul>
+        </header>
+
+    </div>
+
+
     <script src="script.js"></script>
 
 </body>
