--- a/project-43/index.html
+++ b/project-43/index.html
@@ -12,7 +12,7 @@
     <h2>Custom Range Slider</h2>
     <div class="range-container">
         <input type="range" id="range" min="0" max="100">
-        <label for="range"></label>
+        <label for="range">100</label>
     </div>
 
     <script src="script.js"></script>
