--- a/project-46/index.html
+++ b/project-46/index.html
@@ -5,13 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Project-46 Testimonial Box Switcher</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Project-46 Box Switcher</title>
 </head>
 
 <body>
+    <div class="testimonial-container">
+        <div class="progress-bar"></div>
+        <div class="fas fa-quote-right fa-quote"></div>
+        <div class="fas fa-quote-left fa-quote"></div>
+        <p class="testimonial">
+            sample text Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa quam vitae veniam optio
+            expedita repellendus beatae tenetur, tempore eligendi dolorum placeat deserunt asperiores blanditiis
+            dolores et! Eaque distinctio animi temporibus deserunt voluptatum? Dolore, fuga at libero quasi cum ipsa
+            temporibus, hic ea earum inventore quaerat odio dolores nihil alias laudantium voluptates reprehenderit
+            dolorem unde nam eius voluptatibus, modi deleniti sint non! Harum nulla voluptatibus repellendus tempore
+            atque accusantium quibusdam iste. Libero earum quos ad tempora eum reiciendis officia voluptate
+            perspiciatis autem rerum vero, nam fugiat. Deserunt, laborum dicta nostrum provident atque voluptatum
+            delectus voluptas harum fugiat recusandae dolores consectetur dolorem!
+        </p>
+        <div class="user">
+            <img src="https://randomuser.me/api/portraits/women/46.jpg" alt="user" class="user-image" />
+            <div class="user-details">
+                <h4 class="username">Miyah Myles</h4>
+                <p class="role">Marketing</p>
+            </div>
+        </div>
 
 
-    <script src="script.js"></script>
+
+        <script src="script.js"></script>
 
 </body>
 
