--- a/project-46/index.html
+++ b/project-46/index.html
@@ -17,14 +17,10 @@
         <div class="fas fa-quote-right fa-quote"></div>
         <div class="fas fa-quote-left fa-quote"></div>
         <p class="testimonial">
-            sample text Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa quam vitae veniam optio
-            expedita repellendus beatae tenetur, tempore eligendi dolorum placeat deserunt asperiores blanditiis
-            dolores et! Eaque distinctio animi temporibus deserunt voluptatum? Dolore, fuga at libero quasi cum ipsa
-            temporibus, hic ea earum inventore quaerat odio dolores nihil alias laudantium voluptates reprehenderit
-            dolorem unde nam eius voluptatibus, modi deleniti sint non! Harum nulla voluptatibus repellendus tempore
-            atque accusantium quibusdam iste. Libero earum quos ad tempora eum reiciendis officia voluptate
-            perspiciatis autem rerum vero, nam fugiat. Deserunt, laborum dicta nostrum provident atque voluptatum
-            delectus voluptas harum fugiat recusandae dolores consectetur dolorem!
+            I've worked with literally hundreds of HTML/CSS developers and I have to say the top spot goes to this guy.
+            This guy is an amazing developer. He stresses on good, clean code and pays heed to the details. I love
+            developers who respect each and every aspect of a throughly thought out design and do their best to put it
+            in code. He goes over and beyond and transforms ART into PIXELS - without a glitch, every time.
         </p>
         <div class="user">
             <img src="https://randomuser.me/api/portraits/women/46.jpg" alt="user" class="user-image" />
