--- a/project-47/index.html
+++ b/project-47/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <h1>Random Image Feed</h1>
+    <div class="container"></div>
 
     <script src="script.js"></script>
 </body>
