modified css html

--- a/project-48/index.html
+++ b/project-48/index.html
@@ -9,6 +9,15 @@
 </head>
 
 <body>
+    <h1>todos</h1>
+    <form action="" id="form">
+        <input type="text" class="input" id="input" placeholder="Enter your todo" autocomplete="off">
+        <ul class="todos" id="todos">
+            <li>My First Todo</li>
+            <li class="complated">My Second Todo</li>
+        </ul>
+    </form>
+    <small>left click to toggle complated. <br> right click to delete todo</small>
 
     <script src="script.js"></script>
 </body>
