--- a/project-48/index.html
+++ b/project-48/index.html
@@ -10,12 +10,12 @@
 
 <body>
     <h1>todos</h1>
-    <form action="" id="form">
+    <form id="form">
         <input type="text" class="input" id="input" placeholder="Enter your todo" autocomplete="off">
-        <ul class="todos" id="todos">
-        </ul>
+
+        <ul class="todos" id="todos"></ul>
     </form>
-    <small>left click to toggle complated. <br> right click to delete todo</small>
+    <small>Left click to toggle completed. <br> Right click to delete todo</small>
 
     <script src="script.js"></script>
 </body>
